# prompt-inspector-integration

./: .gitignore  README.md
mcp/: .env.example  requirements.txt  server.py
sdk/: demo.js  demo.py
sdk/nodejs/: .gitignore  LICENSE  README.md  package.json  tsconfig.json
sdk/nodejs/src/: client.ts  errors.ts  index.ts  types.ts
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/src/prompt_inspector/: __init__.py  client.py  exceptions.py  models.py
skills/prompt-inspector/: SKILL.md
skills/prompt-inspector/references/: faq.md  product-info.md  usage.md
skills/prompt-inspector/scripts/: detect.js  detect.py
